--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
+# The following section is specific to Flutter packag
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -92,3 +91,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
