--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.4
   lottie: ^2.6.0
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
