project icon and name updated and better performance

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.HorizonSanTech.portafolio">
 
     <application
-        android:label="portafolio"
+        android:label="Portafolio - Santiago Rodriguez Morales"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
