--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   blur: ^3.1.0
   firebase_ui_storage: ^0.1.0-dev.9
   firebase_storage: ^11.2.6
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
