--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.1.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,11 +38,16 @@ dependencies:
   #firebase dependencies
   firebase_core: ^2.15.1
   cloud_firestore: ^4.8.4
-  lottie: ^2.6.0
-  blur: ^3.1.0
   firebase_ui_storage: ^0.1.0-dev.9
   firebase_storage: ^11.2.6
+
+  pdf: ^3.10.4
+  universal_html: ^2.2.4
+  
   flutter_staggered_grid_view: ^0.7.0
+  blur: ^3.1.0
+  
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
