--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   
   #firebase dependencies
-  firebase_core: ^2.15.1
+  firebase_core: ^2.17.0
   cloud_firestore: ^4.8.4
   firebase_ui_storage: ^0.1.0-dev.9
   firebase_storage: ^11.2.6
 
   pdf: ^3.10.4
   universal_html: ^2.2.4
+  path_provider: ^2.1.1
+  open_filex: ^4.3.4
   
   flutter_staggered_grid_view: ^0.7.0
   blur: ^3.1.0
